--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,9 @@ set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
+#set(CMAKE_BUILD_TYPE Debug)
+set(CMAKE_BUILD_TYPE Relase)
+
 find_package(Vulkan REQUIRED)
 
 # Specify the include directory for GLFW
