create vulkan instance

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,14 +21,14 @@ else()
 endif()
 
 # Add source files
-file(GLOB CPP_SOURCES_1 "src/log/*.cpp")
+file(GLOB CPP_SOURCES_1 "src/debug/*.cpp")
 file(GLOB CPP_SOURCES_2 "src/renderer/*.cpp")
 
 # Create the executable
 add_executable(app ${CPP_SOURCES_1} ${CPP_SOURCES_2} ${CPP_SOURCES_3} app.cpp)
 
 # Add header files
-target_include_directories(app PRIVATE "headers/log")
+target_include_directories(app PRIVATE "headers/debug")
 target_include_directories(app PRIVATE "headers/renderer")
 
 # Link Vulkan and GLFW libraries
